# un-speeches

./: .gitignore  README.md  analysis.ipynb  countries.json  country-codes.ipynb  country-codes.json  database.db  db.py  index.html  llm.py  positive_mentions.json  pyproject.toml  script.js  sdgs-extraction.ipynb  sdgs.md  sgds.json  speech-analysis.ipynb  styles.css
data/processed/: sentiments-gpt-4o-mini.sqlite  sentiments.sqlite
notebooks/: enrich_topology.ipynb
public/: countries.js  index.html  negative_received.json  optimistic_received.json  pessimistic_received.json  positive_received.json  script.js  styles.css  topology_with_iso_code.json
scripts/: 0.enrich_topology.ipynb  0.enrich_topology.py  1.download_speeches.py  2.convert_speeches.py  3.analyze_speeches.py  4.publish_speeches.py
speeches/: ae_en.txt  ag_en.txt  al_en.txt  am_en.txt  au_en.txt  az_en.txt  ba_en.txt  bb_en.txt  bd_en.txt  be_en.txt  bj_fr.txt  bs_en.txt  bw_en.txt  bz_en.txt  cd_fr.txt  cf_fr.txt  ch_en.txt  ci_fr.txt  cn_en.txt  cu_es.txt  cv_en.txt  de_en.txt  dk_en.txt  dm_en.txt  ec_es.txt  es_es.txt  fi_en.txt  ge_en.txt  gh_en.txt  gr_en.txt  ht_fr.txt  id_en.txt  in_en.txt  jm_en.txt  jp_en.txt  ke_en.txt  kg_en.txt  ki_en.txt  km_fr.txt  kn_en.txt  (+43 more)
src/: config.py
src/analysis/: __init__.py  mention.py  sentiment.py  speech_analyzer.py
src/data/: __init__.py  downloader.py  speech_files.py
src/infrastructure/: database.py  publisher.py
src/io/: converter.py  llm.py  publisher.py  speech_files.py  (+1 more)
topology/: country-codes.ipynb  topology.json
website/: index.html
(+108 files in other folders)
