[project]
name = "un-speeches"
version = "0.1.0"
description = "Sentiment analysis on United Nations speeches"
authors = [{ name = "Koen van Gilst", email = "koen@koenvangilst.nl" }]
dependencies = [
    "requests>=2.32.3",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "openai>=1.57.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.setuptools]
packages = ["src"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
